minor style change

--- a/app/templates/partials/overall-rankings.html
+++ b/app/templates/partials/overall-rankings.html
@@ -2,8 +2,10 @@
   <span class="glyphicon glyphicon-sort-by-attributes"></span> Overall Rankings
 </div>
 
-<div class="row">
-  <input type="text" class="form-control" placeholder="Search" ng-model="search">
+<div class="row form-group">
+  <div class="col-md-11">
+    <input type="text" class="form-control" placeholder="Search" ng-model="search">
+  </div>
 </div>
 
 <div class="scrollable height-tall">
