--- a/app/templates/rankings.html
+++ b/app/templates/rankings.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div class="row scrollable height-800">
+  <div class="row scrollable height-tall">
     <table class="players table table-condensed table-striped table-hover" >
       <thead>
         <th><a href='' ng-click="predicate = 'rank'; reverse = !reverse">Rank</a></th>
