change to use partial plus add data source to rankings page

--- a/app/templates/rankings.html
+++ b/app/templates/rankings.html
@@ -50,4 +50,8 @@
       </tbody>
     </table>
   </div>
+
+  <div class="row">
+    <a href="http://www.fantasypros.com/nfl/rankings/consensus-cheatsheets.php" target="_blank">Data Source</a>
+  </div>
 </div>
