--- a/app/templates/partials/overall-rankings.html
+++ b/app/templates/partials/overall-rankings.html
@@ -3,8 +3,20 @@
 </div>
 
 <div class="row form-group">
-  <div class="col-md-11">
+  <div class="col-md-7">
     <input type="text" class="form-control" placeholder="Search" ng-model="search">
+  </div>
+
+  <div class="form-group col-md-5">
+    <label class="radio-inline">
+      <input type="radio" ng-model="format" value="standard" ng-change="loadRankings(format)">std <br/>
+    </label>
+    <label class="radio-inline">
+      <input type="radio" ng-model="format" value="ppr" ng-change="loadRankings(format)">ppr <br/>
+    </label>
+    <label class="radio-inline">
+      <input type="radio" ng-model="format" value="half" ng-change="loadRankings(format)">half <br/>
+    </label>
   </div>
 </div>
 
