update future features

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,7 +9,8 @@
 
     <h4>Future Features</h4>
     <ul>
-      <li>Support PPR and .5 PPR</li>
+      <li>Local Storage.</li>
+      <li>Backend API.</li>
       <li>Colorful tiers.</li>
       <li>Show all stats when hover over.</li>
       <li>Better draft grades.</li>
