--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28,3 +28,24 @@
   font-weight: bold;
   margin-bottom: 5px;
 }
+
+html, body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom:60px; /* this needs to be bigger than footer height*/
+}
+
+.footer {
+  position: relative;
+  margin-top: -50px; /* negative value of footer height */
+  height: 50px;
+  clear:both;
+  padding:10px;
+}
