persist drafted data using angular-local-storage

--- a/app/templates/partials/draft-history.html
+++ b/app/templates/partials/draft-history.html
@@ -7,7 +7,7 @@
     <button class="btn btn-sm btn-info" ng-disabled="drafted.length === 0" ng-click="undraft()">Undo</button>
   </div>
   <div class="col-md-3">
-    <button class="btn btn-sm btn-danger" ng-click="resetAll()">Reset All</button>
+    <button class="btn btn-sm btn-warning" ng-click="restart()">Restart</button>
   </div>
 </div>
 
