--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -9,7 +9,8 @@
 
     <h4>Future Features</h4>
     <ul>
-      <li>Local Storage.</li>
+      <li>Support PPR and .5 PPR. <span class="glyphicon glyphicon-ok"></span></li>
+      <li>Local Storage for persisting draft history. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Backend API.</li>
       <li>Colorful tiers.</li>
       <li>Show all stats when hover over.</li>
