add colors to tiers

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -12,7 +12,7 @@
       <li>Support PPR and .5 PPR. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Local Storage for persisting draft history. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Backend API.</li>
-      <li>Colorful tiers.</li>
+      <li>Colorful tiers. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Show all stats when hover over.</li>
       <li>Better draft grades.</li>
       <li>Calculate risk factor.</li>
