minor update on about page

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -31,6 +31,6 @@
 
     <hr />
 
-    All suggestions are welcome. You can email me at jay --at-- jayzheng --dot-- com.
+    Bug reports and suggestions are welcome. Post them <a href="https://github.com/jayjzheng/ff_rankings/issues" target="_blank">here</a>.
   </div>
 </div>
