--- a/app/templates/partials/overall-rankings.html
+++ b/app/templates/partials/overall-rankings.html
@@ -1,5 +1,5 @@
 <div class="aid-title">
-  <span class="glyphicon glyphicon-sort-by-attributes"></span> Overall Rankings
+  <i class="fa fa-sort-amount-asc"></i> Overall Rankings
 </div>
 
 <div class="row form-group">
