--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -1,5 +1,5 @@
 <div class="aid-title">
-  <span class="glyphicon glyphicon-sort-by-attributes"></span> Top Picks By Position
+  <i class="fa fa-signal"></i> Top Picks By Position
 </div>
 
 <div class="col-md-6" ng-repeat="position in positions">
