switch to remote data

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -11,7 +11,7 @@
     <ul>
       <li>Support PPR and .5 PPR. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Local Storage for persisting draft history. <span class="glyphicon glyphicon-ok"></span></li>
-      <li>Backend API.</li>
+      <li>Backend API. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Colorful tiers. <span class="glyphicon glyphicon-ok"></span></li>
       <li>Show all stats when hover over.</li>
       <li>Better draft grades.</li>
