--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -6,6 +6,8 @@
   <span class="col-md-12 position-title">{{positionText(position)}}</span>
   <table class="table table-condensed table-hover table-striped">
     <tr ng-if='!player.drafted'
+        data-toggle="tooltip"
+        title="{{player.name}}, tier: {{player.tier}}, adp: {{player.adp}}, bye: {{player.bye}}"
         ng-class="{active: player.tier % 5 === 0,
                    success: player.tier % 5 === 1,
                    warning: player.tier % 5 === 2,
