--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-6" ng-repeat="position in positions">
   <span class="col-md-12 position-title">{{positionText(position)}}</span>
-  <table class="table table-condensed table-hover table-striped">
+  <table ng-show="!loading" class="table table-condensed table-hover table-striped">
     <tr ng-if='!player.drafted'
         data-toggle="tooltip"
         title="{{player.name}}, tier: {{player.tier}}, adp: {{player.adp}}, bye: {{player.bye}}"
