--- a/app/templates/partials/overall-rankings.html
+++ b/app/templates/partials/overall-rankings.html
@@ -27,7 +27,7 @@
                    warning: player.tier % 5 === 2,
                    info: player.tier % 5 === 3,
                    danger: player.tier % 5 === 4}"
-        ng-repeat="player in rankings | orderBy:['tier', 'rank'] | filter:search"
+        ng-repeat="player in rankings | orderBy:'rank' | filter:search"
         ng-click='draft(player)'>
       <td>Tier {{player.tier}}</td>
       <td>{{player.position}}</td>
