--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -7,7 +7,7 @@
   <table ng-show="!loading" class="table table-condensed table-hover table-striped">
     <tr ng-if='!player.drafted'
         data-toggle="tooltip"
-        title="{{player.name}}, tier: {{player.tier}}, adp: {{player.adp}}, bye: {{player.bye}}"
+        title="{{player.name}}, tier: {{player.tier}}, adp: {{player.average_draft_position}}, bye: {{player.bye_week}}"
         ng-class="{active: player.tier % 4 === 0,
                    success: player.tier % 4 === 1,
                    warning: player.tier % 4 === 2,
