--- a/app/templates/draft-aid.html
+++ b/app/templates/draft-aid.html
@@ -1,4 +1,8 @@
 <div id="main" class="container-fluid clear-top">
+  <div class="alert alert-warning alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong>Note:</strong> Currently only have <strong>standard</strong> rankings from FantasyPros. Hopefully Boris Chen will have his tiering data up soon.
+  </div>
 
   <div class="row">
     <div class="col-md-9">
