--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -18,7 +18,7 @@
       <td>Tier {{player.tier}}</td>
       <td>{{player.name}}</a></td>
       <td>{{player.team}}</td>
-      <td>{{player.bye}}</td>
+      <td>{{player.bye_week}}</td>
     </tr>
   </table>
 </div>
