--- a/app/templates/partials/overall-rankings.html
+++ b/app/templates/partials/overall-rankings.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row form-group">
-  <div class="form-group col-md-5">
+  <div class="form-group col-md-5 col-sm-4 col-xs-4">
     <select ng-model="format"
             ng-change="loadRankings(format)"
             name="format"
@@ -11,11 +11,11 @@
             ng-options="f.value as f.label for f in formats"></select>
   </div>
 
-  <div class="col-md-5">
+  <div class="col-md-5 col-sm-7 col-xs-7">
     <input type="text" class="form-control" placeholder="Search" ng-model="search">
   </div>
 
-  <div class="col-md-1">
+  <div class="col-md-1 hidden-xs hidden-sm">
     <button class="btn" ng-click="search=null">Clear</button>
   </div>
 </div>
