--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -2,8 +2,8 @@
   <i class="fa fa-signal"></i> Top Picks By Position
 </div>
 
-<div class="col-md-6" ng-repeat="position in positions">
-  <span class="col-md-12 position-title">{{positionText(position)}}</span>
+<div class="col-sm-6" ng-repeat="position in positions">
+  <span class="col-sm-12 position-title">{{positionText(position)}}</span>
   <table ng-show="!loading" class="table table-condensed table-hover table-striped">
     <tr ng-if='!player.drafted'
         data-toggle="tooltip"
