--- a/app/templates/partials/draft-history.html
+++ b/app/templates/partials/draft-history.html
@@ -1,13 +1,13 @@
-<div class="aid-title">
+<div class="aid-title hidden-xs">
   <i class="fa fa-history"></i> Draft History
 </div>
 
 <div class="row form-group">
   <div class="col-md-12">
-    <button class="btn btn-sm btn-info" ng-disabled="drafted.length === 0" ng-click="undraft()">
+    <button class="btn btn-sm btn-info btn-responsive" ng-disabled="drafted.length === 0" ng-click="undraft()">
       <i class="fa fa-backward"></i> Undo
     </button>
-    <button class="pull-right btn btn-sm btn-warning" ng-click="restart()">
+    <button class="pull-right btn btn-sm btn-warning btn-responsive" ng-click="restart()">
       <i class="fa fa-eject"></i> Restart
     </button>
   </div>
