--- a/app/templates/partials/draft-history.html
+++ b/app/templates/partials/draft-history.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="scrollable height-tall">
+<div class="scrollable draft-history">
   <table class="table table-condensed table-hover table-striped">
     <tbody>
       <tr ng-repeat="player in drafted | orderBy:'drafted':true">
