--- a/app/css/app.css
+++ b/app/css/app.css
@@ -56,6 +56,10 @@ html, body {
   font-size: 90%;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 @media(min-width: 768px){
   .btn-responsive {
     font-size: 100%;
