Add position limit to picks by position.

--- a/app/templates/partials/position-rankings.html
+++ b/app/templates/partials/position-rankings.html
@@ -1,5 +1,25 @@
 <div class="aid-title">
   <i class="fa fa-signal"></i> Top Picks By Position
+  <div class="pull-right">
+    <i class="fa fa-cog"
+      ng-class="{ 'text-info': settings.active }"
+      ng-click="settings.active = !settings.active">
+    </i>
+  </div>
+</div>
+
+<div class="row settings" ng-show="settings.active">
+  <div class="col-sm-6 form-inline">
+    <div class="form-group">
+      <label>Position Limit</label>
+      <input type="number"
+        class="form-control"
+        placeholder="Limit"
+        ng-model="settings.positionLimit"
+        min="1"
+        max="30">
+    </div>
+  </div>
 </div>
 
 <div class="col-sm-6" ng-repeat="position in positions">
@@ -14,7 +34,7 @@
                    warning: player.tier % 4 === 2,
                    info: player.tier % 4 === 3,
                    danger: player.tier % 1 !== 0 }"
-        ng-repeat="player in rankings | orderBy:'rank' | filter:positionFilter(position) | limitTo: 15"
+        ng-repeat="player in rankings | orderBy:'rank' | filter:positionFilter(position) | limitTo: settings.positionLimit"
         ng-click='draft(player)'>
       <td>Tier {{player.tier}}</td>
       <td>{{player.name}}</a></td>
