Update Rankings page with latest API changes.

--- a/app/templates/rankings.html
+++ b/app/templates/rankings.html
@@ -38,9 +38,9 @@
           <td>{{player.position}}</td>
           <td>{{player.team}}</td>
           <td>{{player.bye_week}}</td>
-          <td>{{player.best}}</td>
-          <td>{{player.worst}}</td>
-          <td>{{player.average | number: 2}}</td>
+          <td>{{player.best_rank}}</td>
+          <td>{{player.worst_rank}}</td>
+          <td>{{player.average_rank | number: 2}}</td>
           <td>{{player.std_dev | number: 2}}</td>
           <td>{{player.average_draft_position || 'NA'}}</td>
         </tr>
